<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_datafragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="DataFragment" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="WebViewFragment" />
        <item
            android:id="@+id/nav_downloadfragment"
            android:icon="@android:drawable/stat_sys_download_done"
            android:title="DonwloadFragment" />
        <item
            android:id="@+id/nav_sensor_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Camera" />
        <item
            android:id="@+id/nav_microphone"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="Microphone" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Profile" />
        <item
            android:id="@+id/nav_cryptography"
            android:icon="@android:drawable/ic_menu_view"
            android:title="Cryptography" />
        <item
            android:id="@+id/weatherFragment"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="Weather" />

    </group>
</menu>